# advent-of-code-2024

./: 12-01.py  README.md  pyproject.toml
01/: part-1.py  part-2.py
02/: part-1.py  part-2.py
03/: step-1.py  step-2.py
04/: part-1.py  part-2.py
05/: part-1.py  part-2.py
06/: 06-01.py  06-1.py  06-2.experiment.py  06-2.py
07/: 07-1.py  07-2.py
08/: 08-01.py  08-02.py
09/: 09-01.py  09-02-broken-but-faster.py  09-02.py
10/: 10-01.py  10-02.py
11/: 11-01.py  11-02.py
12/: 12-01.py  12-02.py
13/: 13-01.py  13-02.experiment.py  13-02.py
14/: 14-01.py  14-02.py
15/: 15-01.py  15-02.py
16/: 16-01.py  16-02.py
17/: 17-1.py  17-2.py
18/: 18-1.py  18-2.py
19/: 19-1.py  19-2.py
20/: 20-1.py  20-2.py
