[project]
name = "advent-of-code-2024"
version = "0.1.0"
description = "Advent of code 2024"
dependencies = [
    "sympy>=1.13.3",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
